--- a/provador.html
+++ b/provador.html
@@ -2,19 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Provador de Óculos 3D</title>
+  <title>Provador 3D de Óculos</title>
   <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
+    body { margin:0; overflow:hidden; }
+    canvas { display:block; }
     #controls {
-      position: absolute;
-      top: 10px; left: 10px;
-      z-index: 10;
-      background: rgba(0,0,0,0.5);
-      padding: 10px;
-      border-radius: 8px;
+      position:absolute; top:10px; left:10px; z-index:10;
+      background: rgba(0,0,0,0.5); padding:10px; border-radius:8px;
     }
-    button { margin: 5px; padding: 8px; cursor: pointer; }
+    button { margin:5px; padding:8px; cursor:pointer; }
   </style>
 </head>
 <body>
@@ -23,40 +19,40 @@
     <button id="btnSolar">🕶️ Óculos Solar</button>
   </div>
 
-  <script type="module">
-    import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.module.js";
-    import { GLTFLoader } from "https://cdn.jsdelivr.net/npm/three@0.152.2/examples/jsm/loaders/GLTFLoader.js";
+  <!-- Three.js + GLTFLoader via script normal -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
 
+  <script>
     let scene, camera, renderer, loader, glassesModel;
 
     function initThree() {
       scene = new THREE.Scene();
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
       camera.position.z = 2;
 
       renderer = new THREE.WebGLRenderer({antialias:true});
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      loader = new GLTFLoader();
+      loader = new THREE.GLTFLoader();
 
       const light = new THREE.HemisphereLight(0xffffff, 0x444444);
-      light.position.set(0, 20, 20);
+      light.position.set(0,20,20);
       scene.add(light);
 
       animate();
     }
 
     function setGlasses(modelFile) {
-      if (glassesModel) {
-        scene.remove(glassesModel);
-        glassesModel = null;
-      }
-      loader.load(modelFile, (gltf) => {
+      if (glassesModel) scene.remove(glassesModel);
+      loader.load(modelFile, function(gltf) {
         glassesModel = gltf.scene;
         glassesModel.scale.set(1,1,1);
         scene.add(glassesModel);
-      }, undefined, (error) => console.error("Erro ao carregar modelo:", error));
+      }, undefined, function(error){
+        console.error('Erro ao carregar modelo:', error);
+      });
     }
 
     function animate() {
@@ -67,8 +63,8 @@
 
     initThree();
 
-    document.getElementById('btnKid').addEventListener('click', () => setGlasses('OculosKid1.glb'));
-    document.getElementById('btnSolar').addEventListener('click', () => setGlasses('OculosSoLarl1.glb'));
+    document.getElementById('btnKid').onclick = () => setGlasses('OculosKid1.glb');
+    document.getElementById('btnSolar').onclick = () => setGlasses('OculosSoLarl1.glb');
   </script>
 </body>
 </html>
