--- a/provador.html
+++ b/provador.html
@@ -1,51 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Provador 3D de Óculos</title>
-  <style>
-    body { margin:0; overflow:hidden; }
-    canvas { display:block; }
-    #controls {
-      position:absolute; top:10px; left:10px; z-index:10;
-      background: rgba(0,0,0,0.5); padding:10px; border-radius:8px;
-    }
-    button { margin:5px; padding:8px; cursor:pointer; }
-  </style>
+<meta charset="UTF-8">
+<title>Provador 3D de Óculos</title>
+<style>
+  body { margin:0; overflow:hidden; }
+  canvas { display:block; }
+  #controls {
+    position:absolute; top:10px; left:10px; z-index:10;
+    background: rgba(0,0,0,0.5); padding:10px; border-radius:8px;
+  }
+  button { margin:5px; padding:8px; cursor:pointer; }
+</style>
 </head>
 <body>
-  <div id="controls">
-    <button id="btnKid">👓 Óculos Kid</button>
-    <button id="btnSolar">🕶️ Óculos Solar</button>
-  </div>
+<div id="controls">
+  <button id="btnKid">👓 Óculos Kid</button>
+  <button id="btnSolar">🕶️ Óculos Solar</button>
+</div>
 
-  <!-- Versão não modular do Three.js -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
+<!-- Three.js r149 + GLTFLoader compatível -->
+<script src="https://cdn.jsdelivr.net/npm/three@0.149.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.149.0/examples/js/loaders/GLTFLoader.js"></script>
 
-  <script>
-    let scene, camera, renderer, loader, glassesModel;
+<script>
+let scene, camera, renderer, loader, glassesModel;
 
-    function initThree() {
-      scene = new THREE.Scene();
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-      camera.position.z = 2;
+function initThree() {
+  scene = new THREE.Scene();
+  camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+  camera.position.z = 2;
 
-      renderer = new THREE.WebGLRenderer({antialias:true});
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
+  renderer = new THREE.WebGLRenderer({antialias:true});
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
 
-      loader = new THREE.GLTFLoader();
+  loader = new THREE.GLTFLoader();
 
-      const light = new THREE.HemisphereLight(0xffffff, 0x444444);
-      light.position.set(0,20,20);
-      scene.add(light);
+  const light = new THREE.HemisphereLight(0xffffff, 0x444444);
+  light.position.set(0,20,20);
+  scene.add(light);
 
-      animate();
-    }
+  animate();
+}
 
-    function setGlasses(modelFile) {
-      if (glassesModel) scene.remove(glassesModel);
-      loader.load(modelFile, function(gltf) {
-        glassesModel = gltf.scene;
-        glassesModel.scale.set(1,1,1);
+function setGlasses(modelFile) {
+  if (glassesModel) scene.remove(glassesModel);
+  loader.load(modelFile, function(gltf) {
+    glassesModel = gltf.scene;
+    glassesModel.scale.set(1,1,1);
+    scene.add(glassesModel);
+  }, undefined, function(error){
+    console.error('Erro ao carregar modelo:', error);
+  });
+}
+
+function animate() {
+  requestAnimationFrame(animate);
+  if (glassesModel) glassesModel.rotation.y += 0.01;
+  renderer.render(scene, camera);
+}
+
+initThree();
+
+document.getElementById('btnKid').onclick = () => setGlasses('OculosKid1.glb');
+document.getElementById('btnSolar').onclick = () => setGlasses('OculosSoLarl1.glb');
+</script>
+</body>
+</html>
